@@ -91,6 +91,7 @@ application {
         '--add-opens=javafx.controls/javafx.scene.control=org.jabref',
         '--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref',
 
+        '--add-opens=javafx.base/javafx.collections=org.jabref',
         '--add-opens=javafx.base/javafx.collections.transformation=org.jabref'
     ]
 }
@@ -493,12 +494,14 @@ run {
         addOpens = [
                 'javafx.controls/javafx.scene.control' : 'org.jabref',
                 'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
-                'javafx.base/javafx.collections.transformation' : 'org.jabref',
                 'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref',
                 'org.controlsfx.controls/org.controlsfx.control.textfield' : 'org.jabref',
 
                 'javafx.controls/javafx.scene.control.skin' : 'org.controlsfx.controls',
-                'javafx.graphics/javafx.scene' : 'org.controlsfx.controls'
+                'javafx.graphics/javafx.scene' : 'org.controlsfx.controls',
+
+                'javafx.base/javafx.collections' : 'org.jabref',
+                'javafx.base/javafx.collections.transformation' : 'org.jabref'
         ]
 
         addModules = [
